exports[`no-duplicate-hooks > invalid(1): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => {});\nbefore(() => {}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before(() => {});
  3 | before(() => {});

`;

exports[`no-duplicate-hooks > invalid(1): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => {});\nbefore(() => {}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before(() => {});
> 3 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Duplicate \`before\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(2): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbeforeEach(() => {});\nbeforeEach(() => {}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | beforeEach(() => {});
  3 | beforeEach(() => {});

`;

exports[`no-duplicate-hooks > invalid(2): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbeforeEach(() => {});\nbeforeEach(() => {}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | beforeEach(() => {});
> 3 | beforeEach(() => {});
    | ^^^^^^^^^^^^^^^^^^^^ Duplicate \`beforeEach\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(3): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nafter(() => {});\nafter(() => {});\nafter(() => {}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | after(() => {});
  3 | after(() => {});
  4 | after(() => {});

`;

exports[`no-duplicate-hooks > invalid(3): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nafter(() => {});\nafter(() => {});\nafter(() => {}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | after(() => {});
> 3 | after(() => {});
    | ^^^^^^^^^^^^^^^ Duplicate \`after\` hook in the same scope.
  4 | after(() => {});

`;

exports[`no-duplicate-hooks > invalid(3): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nafter(() => {});\nafter(() => {});\nafter(() => {}); 3`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | after(() => {});
  3 | after(() => {});
> 4 | after(() => {});
    | ^^^^^^^^^^^^^^^ Duplicate \`after\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(4): import {describe, before, after, beforeEach, afterEach} from 'node:test';\ndescribe(\"a\", () => {\n\tbeforeEach(() => {});\n\tbeforeEach(() => {});\n}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | describe("a", () => {
  3 | 	beforeEach(() => {});
  4 | 	beforeEach(() => {});
  5 | });

`;

exports[`no-duplicate-hooks > invalid(4): import {describe, before, after, beforeEach, afterEach} from 'node:test';\ndescribe(\"a\", () => {\n\tbeforeEach(() => {});\n\tbeforeEach(() => {});\n}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | describe("a", () => {
  3 | 	beforeEach(() => {});
> 4 | 	beforeEach(() => {});
    | 	^^^^^^^^^^^^^^^^^^^^ Duplicate \`beforeEach\` hook in the same scope.
  5 | });

`;

exports[`no-duplicate-hooks > invalid(5): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => {});\ndescribe(\"a\", () => {\n\tafter(() => {});\n\tafter(() => {});\n}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before(() => {});
  3 | describe("a", () => {
  4 | 	after(() => {});
  5 | 	after(() => {});
  6 | });

`;

exports[`no-duplicate-hooks > invalid(5): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore(() => {});\ndescribe(\"a\", () => {\n\tafter(() => {});\n\tafter(() => {});\n}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before(() => {});
  3 | describe("a", () => {
  4 | 	after(() => {});
> 5 | 	after(() => {});
    | 	^^^^^^^^^^^^^^^ Duplicate \`after\` hook in the same scope.
  6 | });

`;

exports[`no-duplicate-hooks > invalid(6): import * as nodeTest from 'node:test';\nnodeTest.before(() => {});\nnodeTest.before(() => {}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.before(() => {});
  3 | nodeTest.before(() => {});

`;

exports[`no-duplicate-hooks > invalid(6): import * as nodeTest from 'node:test';\nnodeTest.before(() => {});\nnodeTest.before(() => {}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.before(() => {});
> 3 | nodeTest.before(() => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate \`before\` hook in the same scope.

`;

exports[`no-duplicate-hooks > invalid(7): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore((): void => {});\nbefore((): void => {}); 1`] = `

  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before((): void => {});
  3 | before((): void => {});

`;

exports[`no-duplicate-hooks > invalid(7): import {describe, before, after, beforeEach, afterEach} from 'node:test';\nbefore((): void => {});\nbefore((): void => {}); 2`] = `

Message:
  1 | import {describe, before, after, beforeEach, afterEach} from 'node:test';
  2 | before((): void => {});
> 3 | before((): void => {});
    | ^^^^^^^^^^^^^^^^^^^^^^ Duplicate \`before\` hook in the same scope.

`;
